# leadershipbutton

./: .cursor-rules.json  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.txt  cloud.sh  create_service_count_file.py  phase_2_dev_plan.md  phast_1_dev_plan.md  product.md  pyproject.toml  python3  pythonTest.py  request.json  request2.json  request3.ssml  request4.json  requirements.txt  requirements.txt   response.json  test_voice_workflow.py
.specpilot/: spec_driven_prompt.md
.specpilot/engine/: README-specpilot.md  bootstrap_py.md  config.json  config_default.json  main.md  spec_driven_prompt.md
.specpilot/examples/: default.json  minimal.json
.specpilot/workspace/: notepad.md
config/: api_config.development.json  api_config.json  api_config.production.json
data/: mixkit  mixkit.txt
docs/: notepad.md  project_conventions.md
docs/plans/: architecture.md  product.md  product_roadmap.md  technical_roadmap.md
docs/settings/: create_product_roadmap_md_prompt.md  spec_driven_prompt.md  (+1 more)
scripts/: deploy_to_pi.sh  generate_voice_samples.py  play_files_from_stdin.py  run_leadershipbutton.sh  tts_from_ssml.py
src/: main.py
tests/: audio_test_utils.py  debug_audio_playback.py  debug_recording.py  test_api_manager_partial.py  test_audio_workflow.py  test_basic_integration.py  test_complete_voice_workflow.py  test_gemini_integration.py  test_gemini_provider.py  test_main_loop.py  test_main_loop_keyboard_emulator.py  test_main_loop_steps.py  test_sound_suggester_scoring.py
tmp/: google_test.ssml  test.ssml  top100_kid_story_audio.csv
(+82 files in other folders)
